--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "rollup-plugin-uglify": "^6.0.2"
   },
   "dependencies": {
-    "chartkick": "^3.2.0",
+    "chartkick": "git+https://github.com/oliv4/chartkick.js.git",
     "deep-equal": "^1.0.1",
     "deepmerge": "^4.2.0"
   }
