fix: package.json repo url

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/ankane/vue-chartkick"
+    "url": "https://github.com/oliv4/vue-chartkick"
   },
   "files": [
     "dist"
